networkpolicy/test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  # ingress:
  # - from:
  #   - podSelector:
  #       matchLabels:
  #         access: "true"
